fix nav overflow

--- a/main.css
+++ b/main.css
@@ -14,20 +14,6 @@ body {
 	background-color: rgb(35, 68, 130);
 }
 
-.modal {
-	position: absolute;
-	width: 100vw;
-	height: auto;
-	top: 0;
-	z-index: 999;
-	bottom: 0;
-	left: 0;
-	background-color: rgb(0, 0, 0);
-	visibility: visible;
-	opacity: 0;
-	transition: opacity 0.7s ease;
-}
-
 .contenedor {
 	padding: 60px 0;
 	width: 100%;
@@ -72,6 +58,7 @@ header {
 
 nav {
 	display: flex;
+	flex-wrap: wrap;
 	gap: 20px;
 	padding-left: 32px;
 	padding-top: 32px;
